@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-03-01
+	Fixed: Parent finding was declaring self as parent. Now correctly reports actual parent process if found.
 ### 2020-02-26
 	Fixed: ArgumentOutOfRange exception in LogListRetrieveItem. Hopefully.
 ### 2020-02-24
